# ROBOTIS-OP3-Demo

./: .gitignore  op3_motion_replay.h  op3_motion_replay_node.cpp  replay_op3.launch
op3_ball_detector/: CMakeLists.txt
op3_ball_detector/config/: ball_detector_params.yaml  red_ball_config.yaml
op3_ball_detector/include/op3_ball_detector/: ball_detector.h  ball_detector_config.h
op3_ball_detector/py/: lightanalysis.py  noiseanalysis.py
op3_ball_detector/src/: ball_detector.cpp  ball_detector_config.cpp
op3_motion_replay/: CMakeLists.txt  package.xml
op3_motion_replay/include/op3_motion_replay/: op3_motion_replay.h
op3_motion_replay/launch/: replay.launch  replay_op3.launch
op3_motion_replay/src/: op3_motion_replay.cpp  op3_motion_replay_node.cpp
